src/test/deca/syntax/valid/created/sans_objet/fichier.deca
// Description:
//    Programme minimaliste utilisant un fichier.
//
// Resultats:
//    connaitre l'inclusion de fichier
//
// Historique:
//    cree le 11/01/2024

#include "file_vide_pour_tester_include.deca"

{
    
}